--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@capacitor/android": "^8.0.0",
+    "@capacitor/cli": "^8.0.0",
+    "@capacitor/core": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
