--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application
+
+
+  <uses-feature
+    android:name="android.software.leanback"
+    android:required="true" />
+
+  <uses-permission android:name="android.permission.INTERNET" />
+
+
+  <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,10 +25,10 @@
           android:launchMode="singleTask"
           android:configChanges="orientation|keyboardHidden|screenSize|uiMode">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+          <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
+          </intent-filter>
 
         </activity>
 
