--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor/android": "^8.0.0",
     "@capacitor/cli": "^8.0.0",
     "@capacitor/core": "^8.0.0",
+    "@capacitor/network": "^8.0.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^2.3.0",
     "tslib": "^2.3.0"
